--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <script type="test/javascrtpt">console.log("GitHub Works");</script>
     <script type="text/javascript" src="./data.js"></script>
     <script type="text/javascript" src="./fucntions.js"></script>
 
